--- a/app/templates/liveTemplates/index.html
+++ b/app/templates/liveTemplates/index.html
@@ -28,7 +28,7 @@
         </nav>
         <div id="notifications">
             <a href="#"><div class ="navElements" id="create">
-                <div id="navIcon"><img src="images/notifications.svg"></div>
+                <div id="navIcon"><img src="images/bell.svg"></div>
                 <p>Notifications</p>
                 
             </div></a>
