--- a/app/templates/liveTemplates/index.html
+++ b/app/templates/liveTemplates/index.html
@@ -55,8 +55,20 @@
                         <img src="images/x.svg" alt="">
                         <p class="category">descriptor</p>
                     </td>
+                    <td>
+                        <img src="images/x.svg" alt="">
+                        <p class="category">descriptor</p>
+                    </td>
+
                 </tr>
-                
+                <tr class="content">
+                    <td class="content-data">
+                        <img src="images/testpicture.png" alt="">
+                        <div class="description">
+                            
+                        </div>
+                    </td>
+                </tr>
             </table>
             
         </section>
