--- a/app/templates/liveTemplates/index.html
+++ b/app/templates/liveTemplates/index.html
@@ -15,7 +15,7 @@
         <nav>
             <a href="#"><div class ="navElements" id="create">
                 <div id="navIcon"><img src="images/create.svg"></div>
-                <p>Create</p>
+                <p>Create recipe</p>
             </div></a>
             <a href="#"><div class ="navElements"  id="myrecipes">
                 <div id="navIcon"><img src="images/myrecipes.svg"></div>
@@ -27,11 +27,10 @@
             </div></a>
         </nav>
         <div id="notifications">
-            <a href="#"><div class ="navElements" id="create">
+            <a href="#"><div class ="navElements" id="notification">
                 <div id="navIcon"><img src="images/bell.svg"></div>
-                <p>Notifications</p>
+                <p>notifications</p>
             </div></a>
-            <div id="line"></div>
             <section></section>
         </div>
     </section>
